# completion-ai

./: .gitignore  README.md  pyproject.toml
completion_ai/: cli.py  crawler.py  llm.py  renderer.py
eval/: check_claude.py
eval/fixtures/: claude_expected.json  claude_help.txt  claude_mcp_add_help.txt
