[project]
name = "completion-ai"
version = "0.1.1"
description = "LLM-powered zsh completion scaffolding for arbitrary CLIs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "yangwb", email = "binyang617@gmail.com" }]
keywords = ["cli", "completion", "zsh", "llm", "qwen", "dashscope"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "openai>=1.40.0",
    "httpx[socks]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Yangeyu/completion-ai"
Repository = "https://github.com/Yangeyu/completion-ai"
Issues = "https://github.com/Yangeyu/completion-ai/issues"

[project.scripts]
completion-ai = "completion_ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["completion_ai"]

[tool.hatch.build.targets.sdist]
include = [
    "completion_ai",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
